--- a/main.css
+++ b/main.css
@@ -3,7 +3,6 @@
     url("images/freedom.jpg") center / cover no-repeat border-box, #ff1b68;
   width: 100vw;
   height: 33vh;
-  margin-top: 3.5rem;
   position: relative;
 }
 
@@ -109,7 +108,9 @@
 
 .modal {
   position: fixed;
-  display: none;
+  opacity: 0;
+  transform: translateY(-3rem);
+  transition: opacity 200ms ease-out, transform 500ms ease-out;
   z-index: 200;
   top: 20%;
   left: 30%;
