--- a/shared.css
+++ b/shared.css
@@ -6,19 +6,29 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
+  display: grid;
+  grid-template-rows: 3.5rem auto fit-content(8rem);
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
+  height: 100%;
 }
 
 main {
-  min-height: calc(100vh - 3.5rem - 8rem);
-  margin-top: 3.5rem;
+  grid-area: main;
 }
 
 .backdrop {
-  position: fixed;
   display: none;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
@@ -121,7 +131,7 @@ main {
 }
 
 .mobile-nav {
-  display: none;
+  transform: translateX(-100%);
   position: fixed;
   z-index: 101;
   top: 0;
@@ -129,6 +139,7 @@ main {
   background: white;
   width: 80%;
   height: 100vh;
+  transition: transform 300ms ease-out;
 }
 
 .mobile-nav__items {
@@ -151,10 +162,17 @@ main {
   font-size: 1.5rem;
 }
 
+.open {
+  display: block !important;
+  opacity: 1 !important;
+  transform: translateY(0) !important;
+}
+
 .main-footer {
   background: black;
   padding: 2rem;
   margin-top: 3rem;
+  grid-area: footer;
 }
 
 .main-footer__links {
